# kaiju

./: .clang-format  find_sources.sh  meson.build  todo.md
include/: bridge.h  bridge_hooks.h  config_loader.h  kaiju_input.h  kaiju_output.h  kaiju_server.h  kaiju_view.h  output.h
include/bridge/: hooks.h  view.h
include/shell/: kaiju_view.h  xdg.h
kaiju-bridge/: build.gradle  settings.gradle
kaiju-bridge/gradle/wrapper/: gradle-wrapper.properties
kaiju-bridge/src/linuxMain/kotlin/com/frederikam/kaiju/: SampleLinux.kt
kaiju-bridge/src/linuxMain/kotlin/sample/: SampleLinux.kt
kaiju-bridge/src/linuxTest/kotlin/sample/: SampleTests.kt
kaiju-bridge/src/nativeInterop/cinterop/: kaiju_core.def
protocols/: meson.build
src/: bridge.h  config_loader.c  config_loader.h  kaiju_input.c  kaiju_output.hpp  kaiju_server.cpp  kaiju_server.h  kaiju_server.hpp  kaiju_view.c  main.c  main.cpp  output.c  output.cpp  output.hpp
src/shell/: kaiju_view.c  xdg.c
